# esn-lab

./: .gitignore  cli.py  commands.md  log.md  memo.md  pyproject.toml  readme-en.md  readme.md  requirements.txt
.github/: copilot-instructions.md
configs/: base.yaml
configs/evaluate/: analysis.yaml  run.yaml  summary.yaml  tenfold.yaml
configs/integ/: grid.yaml  tenfold.yaml
configs/predict/: batch.yaml  single.yaml
configs/train/: batch.yaml  single.yaml  tenfold.yaml  tenfold_npy.yaml  tenfold_search.yaml
design/: design.drawio
docs/: CONFIGURATION.md  PACKAGE_STRUCTURE.md  overview.md
projects/: Makefile
projects/apps/: eval_dist.py  eval_dist_node.py  eval_judgement.py  eval_metrics.py  eval_plot.py  pred_tenfold.py  tenfold_analysis_app.py  tenfold_app.py  tenfold_eval_app.py  tenfold_train_app.py  tenfold_train_appv2.py  tenfold_train_appv3.py  train_tenfold.py
projects/configs/: eval_dist.yaml  eval_dist_node.yaml  eval_judgement.yaml  eval_metrics.yaml  eval_plot.yaml  pred_tenfold.yaml  tenfold_analysis.yaml  tenfold_eval.yaml  tenfold_pred.yaml  tenfold_train.yaml  train_tenfold.yaml
projects/tasks/: cli.py
projects/tasks/pred/: app.py  (+1 more)
projects/utils/: app_init.py  config_loader.py  confusion.py  data_loader.py  filter.py  grid_builder.py  judgment.py  metrics.py  param_grid.py  performance_analysis.py  prediction.py  prediction_cli.py  result_saver.py  results.py  vote.py  weight_io.py  weight_saver.py
scripts/: test.zsh
src/esn_lab/: __init__.py
src/pyesn/: __init__.py  cli.py
src/yourpkg.egg-info/: PKG-INFO  SOURCES.txt
(+129 files in other folders)
