[project]
name = "esn-lab"
version = "0.1.0"
description = "A Python package for Echo State Network experiments." 
readme = "readme-en.md" 

license = { text = "MIT License" }

classifiers = [
    "Development Status :: 3 - Alpha", 
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "opencv-python",
    "PyYAML",
    "omegaconf",
    "networkx",
    "tqdm",
]

[project.optional-dependencies]
gpu = ["cupy-cuda13x"]

[project.scripts]
esnlab = "esn_lab.cli:main"

[project.urls]
"Homepage" = "https://github.com/Applica-760/esn-lab"
"Repository" = "https://github.com/Applica-760/esn-lab"
"Bug Tracker" = "https://github.com/Applica-760/esn-lab/issues"


[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools.package-data]
esn_lab = ["config_templates/**"]